--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,7 +12,11 @@ const { title } = Astro.props;
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0,viewport-fit=cover">
+		<link rel="manifest" href="/manifest.json">
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="apple-touch-icon" href="/ios.png">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 		{ import.meta.env.HEAD_SCRIPTS ? <Fragment set:html={import.meta.env.HEAD_SCRIPTS} /> : null }
@@ -65,6 +69,18 @@ const { title } = Astro.props;
 		background-color: var(--c-bg);
 	}
 </style>
+
+<script>
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', function() {
+    navigator.serviceWorker.register('/service-worker.js').then(function(registration) {
+      console.log('Service worker registered:', registration);
+    }).catch(function(error) {
+      console.log('Service worker registration failed:', error);
+    });
+  });
+}
+</script>
 
 <script>
 const initTheme = () => {
